# z2l

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  run_quick.rs  tui.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  mmu.rs  ram.rs  rom.rs
core/src/clock/: fixed.rs  free.rs  manual.rs  mod.rs
core/src/extension/: mod.rs  opcode_handler.rs
core/src/instruction/: mod.rs  parts.rs
core/src/processor/: hart.rs  mod.rs  register.rs
examples/: README.md  fib.S  z2l.ld
isa/: Cargo.toml
isa/src/: lib.rs
isa/src/rv32i/: auipc.rs  branch.rs  fence.rs  jal.rs  jalr.rs  load.rs  lui.rs  mod.rs  store.rs  system.rs
isa/src/rv32i/op/: arithmetic.rs  compare.rs  logic.rs  mod.rs  shift.rs
isa/src/rv32i/op_imm/: add.rs  compare.rs  logic.rs  mod.rs  shift.rs
