[workspace]
members = [
    "core",
    "cli",
    "isa",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "RISC-V emulator"
repository = "https://github.com/tom25519/z2l"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
bus = "2.4.1"
log = "0.4.20"

