[package]
name = "z2l-cli"
description = "CLI for the Z2L emulator"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bus.workspace = true
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
cursive = "0.20.0"
env_logger = "0.10.0"
log.workspace = true
z2l-core = { path = "../core" }
z2l-isa = { path = "../isa" }
